# statical

./: .electron-vendors.cache.json  .env.example  .eslintrc  .eslintrc-auto-import.json  .gitignore  LICENSE  electron-builder.json  electron-builder.json5  graphql.codegen.ts  graphql.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  unocss.config.ts  vite.config.ts
db/migrations/default/1671317145795_create_table_public_dict_companies/: down.sql  up.sql
electron/main/: index.ts
electron/preload/: index.ts
locales/: en.yaml  ru.yaml
scripts/: update-browser-version-cache.mjs
src/: App.vue  main.ts  tauri.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: commands.rs  main.rs
src-tauri/src/commands/: utils.rs  window.rs
src/assets/svg/: index.ts
src/common/locales/: en.yaml  ru.yaml
src/common/types/: auto-imports.d.ts  components.d.ts  env-electron.d.ts  env-vite.d.ts
src/components/AppLayout/: AppLayout.vue
src/components/Sidebar/: Sidebar.vue  SidebarMenuItem.vue
src/components/Titlebar/: Titlebar.vue
src/components/Topbar/: Topbar.vue
src/components/molecules/: Breadcrumb.vue
src/components/organisms/: HeaderContent.vue
src/composables/: useWSClient.ts
src/gql/: generated.ts
src/gql/docs/: users.graphql
src/hooks/: auth.ts
src/ipc-samples-unused/: node-api.ts
src/layouts/: default.vue  empty.vue
src/main/: css.ts  index.ts  ipc.ts  main.ts  preload.ts  window.ts
src/main/animation/: dom.ts  index.ts
src/main/db/: index.ts
src/main/logger/: index.ts
src/preload/: animation.ts  index.ts
src/preload/utils/: dom.ts  html.ts  index.ts
src/renderer/: App.vue  index.html  main.ts
src/renderer/assets/svg/: index.ts
src/renderer/components/ContentContainer/: ContentContainer.vue
src/renderer/composables/: useSupabase.ts
src/renderer/gql/: generated.ts  schema.graphql  urql-schema.ts
src/renderer/layouts/: default.vue
src/renderer/router/: guards.ts
src/renderer/setup/: i18n.ts  nhost.ts  pinia.ts  router.ts  styles.ts  supabase.ts  urql.ts
src/renderer/store/: app.ts  locale.ts  user.ts
src/renderer/styles/: default.scss  element.scss  icons.ts
src/renderer/types/: auto-imports.d.ts  components.d.ts  env-electron.d.ts  router.d.ts  supabase.gen.d.ts
src/renderer/utils/: index.ts  is.ts  logger.ts  toasts.ts  urql.ts  wait.ts
src/renderer/views/: dict.vue  home.vue  index.vue  login.vue  profile.vue
src/router/: guards.ts  routes.ts
src/setup/: i18n.ts  nhost.ts  router.ts  styles.ts  urql.ts
src/shared/ipc/: index.ts
src/shared/locales/: en.yaml  ru.yaml
src/store/: app.ts  locale.ts  user.ts
src/styles/: default.scss  global.scss  icons.ts  quasar.variables.scss  theme.ts  unocss.ts
src/types/: auto-imports.d.ts  components.d.ts  typed-router.d.ts
src/utils/: auth.ts  envcast.ts  icons.ts  index.ts  is.ts  logger.ts  toast.ts  toasts.ts  urql.ts
src/views/: home.vue  login.vue
src/views/dict/: employees.vue
types/: auto-imports.d.ts  components.d.ts  env.d.ts
(+80 files in other folders)
