# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "statical"
version = "0.1.0"
edition = "2021"
rust-version = "1.68"

[build]

[dependencies]
chrono = "0.4.24"
lazy_static = "1.4.0"
log = "0.4.17"
specta = "1.0.2"
tauri = { version = "1.2.4", features = ["window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev", version = "0.1.0", features = ["colored"] }
tauri-specta = { version = "1.0.0", features = ["typescript"] }
window-shadows = "0.2.1"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[profile.release]
panic = "abort"
lto = true
incremental = false
opt-level = "s"
