# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "statical"
version = "0.1.0"
edition = "2021"
rust-version = "1.68"

[dependencies]
chrono = "0.4.24"
lazy_static = "1.4.0"
log = "0.4.17"
once_cell = { version = "1.17.1", features = ["parking_lot"] }
tauri = { version = "1.2.4", features = ["os-all", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev", version = "0.1.0", features = ["colored"] }
tokio = { version = "1.26.0", features = ["full"] }
window-shadows = "0.2.1"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[profile.release]
panic = "abort"
lto = true
incremental = false
opt-level = 3
